--- a/HTML&CSS/imooc/07_1-4CSS_styles_inline_embedded_external.html
+++ b/HTML&CSS/imooc/07_1-4CSS_styles_inline_embedded_external.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>第7章 CSS样式基本知识</title>
-	<link href="./CSS/7_1-4style.css" rel="stylesheet" type="text/css" />
+	<link href="./css/7_1-4style.css" rel="stylesheet" type="text/css" />
 	<style type="text/css">
 		span{
 			color:blue;
