--- a/HTML&CSS/imooc/tengwanggexu.html
+++ b/HTML&CSS/imooc/tengwanggexu.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>滕王阁序</title>
-    <link rel="stylesheet" type="text/css" href="./CSS/tengwanggexu.css">
+    <link rel="stylesheet" type="text/css" href="./css/tengwanggexu.css">
     <style type="text/css">
 
     </style>
